karl package Changelog
======================

Unreleased
----------



3.76 (2011-12-15)
-----------------

- Fixed LP #891278: Some links to the wiki trash were incorrect.

- Fixed LP #897435: File content needed to be reindexed on revert.

- LP #824640: Add sorting facets to advanced search view.

- LP #893767: Move 'Multi Upload' out of folder addables.

3.75 (2011-12-07)
-----------------

- Fixed LP #883250: display proper page titles on member management
  pages.

- resolve distorted pictures on people page #892357

3.74 (2011-11-17)
-----------------

- Fixed LP #877364:  tolerate 'macintosh' encoding (ancient OS9-ism) when
  converting HTML to text.

- Fixed LP #824631: Sped up search results involving a large time span
  (such as "past year") using a new kind of index with multiple levels
  of granularity. Also added an evolve script to perform the conversion.

- Show staff calendar tab.

- Fixed LP #890419: show last modified not creator on search results.

- Change default calendar view from day -> month.

3.73 (2011-10-27)
-----------------

- Fixed LP #874519: Clicking 'More Events' Resets Layer Selection

- Fixed a series of IE bugs by restoring the doctype declaration
  at the top of every page.

3.72 (2011-09-29)
-----------------

- When doing the text indexing on files, text data is now re-extracted from
  files if the cached text is an empty string.  This allows for files
  previously indexed when an external converter was unavailable to be properly
  reindexed after the external converter is added to the system.

- When restoring an object from the trash, if a conflicting name is
  in the container, append a suffix to the name.  (LP #821206)

- Fixed a DST issue in the versions.format_local_date() function which
  formats a date for display in versioning UIs.

- Fixed the interpretation of message timestamps so that objects created
  through email will have the correct time.  Also, prefer to use the